--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -23,6 +22,8 @@
 
     <section class="flex">
       <nav class="bg-green-900 p-6">
+        <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
+
         <ul class="text-gray-300 leading-8">
           <li><a href="/">Home</a></li>
           <li><a href="/questions">Questions</a></li>
@@ -30,9 +31,10 @@
           <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
+
       <main class="container mx-auto mt-4 px-5 flex">
-      <%= yield %>
-    </main>
+        <%= yield %>
+      </main>
     </section>
   </body>
 </html>
