--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,23 +12,22 @@
 
   <body>
     <header class="bg-green-700 flex justify-between items-center">
-      <%= image_tag 'logo.svg', alt:  'The Pragmatic Bookshelf' %>
-      <h1><%= @page_title %></h1>
-      <div class="text-white text-2xl m-4">
-        <%= Time.now.strftime("%H:%M:%S") %>
-      </div>
+      <a href="/"><%= image_tag 'logo.svg', alt:  'The Pragmatic Bookshelf' %></a>
       
+      <time class="text-white text-2xl m-4">
+        <%= Time.now.strftime("%H:%M:%S") %>
+      </time>
     </header>
 
     <section class="flex">
-      <nav class="bg-green-900 p-6">
+      <nav class="bg-green-900 p-6 overflow-scroll">
         <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
 
         <ul class="text-gray-300 leading-8">
-          <li><a href="/">Home</a></li>
-          <li><a href="/questions">Questions</a></li>
-          <li><a href="/news">News</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="/" class="hover:text-white hover:underline transition-all duration-200">Home</a></li>
+          <li><a href="/questions" class="hover:text-white hover:underline transition-all duration-200">Questions</a></li>
+          <li><a href="/news" class="hover:text-white hover:underline transition-all duration-200">News</a></li>
+          <li><a href="/contact" class="hover:text-white hover:underline transition-all duration-200">Contact</a></li>
         </ul>
       </nav>
 
