--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -7,5 +7,5 @@
   <td>&times;</td>
   <td class="pr-2"><%= line_item.product.title %></td>
   <td class="text-right font-bold"><%= number_to_currency(line_item.total_price) %></td>
-  <td class="text-right text-xs text-white font-light"><%= button_to '-', line_item, method: :delete, class: 'bg-red-500  px-3 rounded-full text-lg' %></td>
+  <td class="text-right text-xs text-white font-light"><%= button_to '-', line_item, method: :delete, class: 'bg-red-500 ml-2 px-3 rounded-full text-lg' %></td>
 </tr>
