--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -42,6 +42,6 @@
   </div>
 
   <div class="inline">
-    <%= form.submit 'Plcae order', class: "rounded-lg py-3 px-5 bg-green-200 text-black inline-block font-medium cursor-pointer" %>
+    <%= form.submit 'Place order', class: "rounded-lg py-3 px-5 bg-green-200 text-black inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
