--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :adress %>
-    <%= form.text_area :adress, rows: 4, class: "input-field" %>
+    <%= form.label :address %>
+    <%= form.text_area :address, rows: 4, class: "input-field" %>
   </div>
 
   <div class="my-5">
