--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -5,8 +5,8 @@
   </p>
 
   <p class="my-5">
-    <strong class="block font-medium mb-1">Adress:</strong>
-    <%= order.adress %>
+    <strong class="block font-medium mb-1">address:</strong>
+    <%= order.address %>
   </p>
 
   <p class="my-5">
