--- a/app/views/order_mailer/received.html.erb
+++ b/app/views/order_mailer/received.html.erb
@@ -1,9 +1,3 @@
-Dear <%= @order.name %>
+Order#received
 
-Thank you for your recent order from the Pragmatic Store.
-
-You ordered the following items:
-
-<%= render @order.line_items %>
-
-We'll send you a separate e-mail when your order ships.
+<%= @greeting %>, find me in app/views/order_mailer/received.html.erb
