--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,16 @@
           <li><a href="/news" class="hover:text-white hover:underline transition-all duration-200">News</a></li>
           <li><a href="/contact" class="hover:text-white hover:underline transition-all duration-200">Contact</a></li>
         </ul>
+
+        <% if session[:user_id]%>
+          <hr class="my-2">
+          <ul class="text-gray-300 leading-8">
+            <li><%= link_to "Orders", orders_path %></li>
+            <li><%= link_to "Products", products_path %></li>
+            <li><%= link_to "Users", users_path %></li>
+            <li><%= button_to "Logout", logout_path, method: :delete, class: 'text-red-500' %></li>
+          </ul>
+        <% end %>
       </nav>
 
       <main class="container mx-auto mt-4 px-5 flex">
