--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full">
-  <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome</h1>
+  <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome, <%= @username %></h1>
   
   <p>It's <%= Time.now %>. We have <%= pluralize(@total_orders, "order") %>.</p>
 </div>
