--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <header class="bg-green-700 flex justify-between items-center sticky top-0 left-0 right-0 ">
+    <header class="bg-green-700 flex justify-between items-center fixed top-0 left-0 right-0 z-50">
       <a href="/"><%= image_tag 'logo.svg', alt:  'The Pragmatic Bookshelf' %></a>
 
-        <ul class="text-gray-300 leading-8 gap-5 flex flex-row">
-        <li><a href="/" class="hover:text-white hover:underline transition-all duration-200">Home</a></li>
+      <ul class="text-gray-300 leading-8 gap-5 flex flex-row">
+        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Home", store_index_path %></li>
         <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Questions", questions_path %></li>
         <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "News", news_path %></li>
         <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Contact", contact_path %></li>
@@ -28,12 +28,12 @@
     </header>
 
     <section class="flex">
-        <nav class="bg-green-900 p-6 overflow-scroll min-w-[200px]">
-          <div class="sticky top-0">
+        <nav class="bg-green-900 p-6 overflow-scroll min-h-screen">
+          <div class="sticky top-20 z-0">
             <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
 
             <% if session[:user_id]%>
-              <ul class="text-gray-300 leading-8">
+              <ul class="text-gray-300 leading-8 min-w-[200px]">
                 <li class="text-bold text-center"><%= User.find(session[:user_id]).name %></li>
                 <li><hr class="my-2"></li>
                 <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Orders", orders_path %></li>
@@ -46,7 +46,7 @@
         </nav>
 
 
-      <main class="container mx-auto mt-4 px-5 flex">
+      <main class="container mx-auto mt-24 px-5 flex">
         <%= yield %>
       </main>
     </section>
