--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
       <a href="/"><%= image_tag 'logo.svg', alt:  'The Pragmatic Bookshelf' %></a>
 
       <ul class="text-gray-300 leading-8 gap-5 flex flex-row">
-        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Home", store_index_path %></li>
-        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Questions", questions_path %></li>
-        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "News", news_path %></li>
-        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Contact", contact_path %></li>
+        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.home'), store_index_path %></li>
+        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.questions'), questions_path %></li>
+        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.news'), news_path %></li>
+        <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.contact'), contact_path %></li>
         <li><a href="/admin" class="hover:text-white hover:underline transition-all duration-200 <%= session[:user_id] ? "hidden" : "block" %>">Log in</a></li>
       </ul>
 
