--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,13 @@
             <%= render partial: 'layouts/cart', locals: { cart: @cart } %>
 
             <% if session[:user_id]%>
-              <ul class="text-gray-300 leading-8 min-w-[200px]">
+              <ul class="text-gray-300 leading-8 min-w-[100px]">
                 <li class="text-bold text-center"><%= User.find(session[:user_id]).name %></li>
                 <li><hr class="my-2"></li>
-                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Orders", orders_path %></li>
-                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Products", products_path %></li>
-                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to "Users", users_path %></li>
-                <li><%= button_to "Logout", logout_path, method: :delete, class: 'text-red-500 hover:underline transition-all duration-200' %></li>
+                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.orders'), orders_path %></li>
+                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.products'), products_path %></li>
+                <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.users'), users_path %></li>
+                <li><%= button_to t('.logout'), logout_path, method: :delete, class: 'text-red-500 hover:underline transition-all duration-200' %></li>
               </ul>
             <% end %>
           </div>
