--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,21 @@
         <li class="hover:text-white hover:underline transition-all duration-200"><%= link_to t('.contact'), contact_path %></li>
         <li><a href="/admin" class="hover:text-white hover:underline transition-all duration-200 <%= session[:user_id] ? "hidden" : "block" %>">Log in</a></li>
       </ul>
-
-      <time class="text-white text-2xl m-4">
-        <%= Time.now.strftime("%H:%M:%S") %>
-      </time>
+      
+      <div class="flex flex-row items-center">
+        <div data-controller="locale">
+          <%= form_tag store_index_path, class: 'locale' do %>
+            <%= select_tag 'set_locale',
+              options_for_select(LANGUAGES, I18n.locale.to_s),
+              onchange: 'this.form.submit()' %>
+            <%= submit_tag 'submit', data: {'locale-target' => 'submit'} %>
+         <% end %>
+        </div>
+        
+        <time class="text-white text-2xl m-4">
+          <%= Time.now.strftime("%H:%M:%S") %>
+        </time>
+      </div>
     </header>
 
     <section class="flex">
