--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,10 @@
-<div class="w-full">
-  <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome, <%= @username %></h1>
-  
-  <p>It's <%= Time.now %>. We have <%= pluralize(@total_orders, "order") %>.</p>
+<div class="flex flex-col"> 
+  <div class="w-full">
+    <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome, <%= @username %></h1>
+    <p class="my-2">It's <%= Time.now %>. We have <%= pluralize(@total_orders, "order") %>.</p>
+  </div>
+  <h2 class="mx-auto">Admin panel</h2>
+  <div class="m-5 bg-blue-200 w-full h-full flex flex-row flex-wrap">
+
+  </div>
 </div>
