--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,10 +1,12 @@
-<div class="flex flex-col"> 
+<div class="flex flex-col w-full"> 
   <div class="w-full">
     <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome, <%= @username %></h1>
     <p class="my-2">It's <%= Time.now %>. We have <%= pluralize(@total_orders, "order") %>.</p>
   </div>
-  <h2 class="mx-auto">Admin panel</h2>
-  <div class="m-5 bg-blue-200 w-full h-full flex flex-row flex-wrap">
-
+  <div class="mr-5 w-full h-full flex flex-row flex-wrap gap-2 p-5">              
+    <div class="flex basis-1/3 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.orders'), orders_path %></div>
+    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.products'), products_path %></div>
+    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.users'), users_path %></div>
+    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to "Support requests", support_requests_path %></div>
   </div>
 </div>
