--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,10 +3,22 @@
     <h1 class="mx-auto lext-lg font-bold text-4xl">Welcome, <%= @username %></h1>
     <p class="my-2">It's <%= Time.now %>. We have <%= pluralize(@total_orders, "order") %>.</p>
   </div>
-  <div class="mr-5 w-full h-full flex flex-row flex-wrap gap-2 p-5">              
-    <div class="flex basis-1/3 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.orders'), orders_path %></div>
-    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.products'), products_path %></div>
-    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to t('.users'), users_path %></div>
-    <div class="flex basis-1/2 bg-blue-800 text-white rounded-xl font-bold min-w-[300px] h-fit p-2"><%= link_to "Support requests", support_requests_path %></div>
+  <div class="w-full flex flex-row flex-wrap gap-2">              
+    <%= link_to orders_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300' do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M15.666 3.888A2.25 2.25 0 0013.5 2.25h-3c-1.03 0-1.9.693-2.166 1.638m7.332 0c.055.194.084.4.084.612v0a.75.75 0 01-.75.75H9a.75.75 0 01-.75-.75v0c0-.212.03-.418.084-.612m7.332 0c.646.049 1.288.11 1.927.184 1.1.128 1.907 1.077 1.907 2.185V19.5a2.25 2.25 0 01-2.25 2.25H6.75A2.25 2.25 0 014.5 19.5V6.257c0-1.108.806-2.057 1.907-2.185a48.208 48.208 0 011.927-.184" /></svg>
+      <%= t('.orders') %>
+    <% end %>
+    <%= link_to products_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300'  do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25" /></svg>
+      <%= t('.products') %>
+    <% end %>
+    <%= link_to users_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300' do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" /></svg>
+        <%= t('.users') %>
+    <% end %>
+    <%= link_to support_requests_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300' do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M8.625 12a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 01-2.555-.337A5.972 5.972 0 015.41 20.97a5.969 5.969 0 01-.474-.065 4.48 4.48 0 00.978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25z" /></svg>
+      <%= t('.support_request') %>
+    <% end %>
   </div>
 </div>
