--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
         </nav>
 
 
-      <main class="container mx-auto mt-24 px-5 flex">
+      <main class="w-full mx-auto mt-24 px-5 flex">
         <%= yield %>
       </main>
     </section>
