--- a/app/views/support_request_mailer/respond.html.erb
+++ b/app/views/support_request_mailer/respond.html.erb
@@ -1,5 +1,5 @@
-<%= support_request.response %>
+<%= @support_request.response %>
 
 <blockquote>
-  <%= support_request.body %>
+  <%= @support_request.body %>
 </blockquote>
