--- a/app/views/support_request_mailer/respond.text.erb
+++ b/app/views/support_request_mailer/respond.text.erb
@@ -1,3 +1,3 @@
-<%= support_request.response.to_plain_text %>
+<%= @support_request.response.to_plain_text %>
 
-<%= support_request.body %>
+<%= @support_request.body %>
