--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -13,7 +13,7 @@
       <%= t('.products') %>
     <% end %>
     <%= link_to users_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300' do %>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" /></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-12 h-12"><path stroke-linecap="round" stroke-linejoin="round" d="M15 19.128a9.38 9.38 0 002.625.372 9.337 9.337 0 004.121-.952 4.125 4.125 0 00-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 018.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0111.964-3.07M12 6.375a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zm8.25 2.25a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z" /></svg>
         <%= t('.users') %>
     <% end %>
     <%= link_to support_requests_path, class:'flex basis-52 gap-5 grow flex-col justify-center items-center bg-green-800 text-white rounded-xl font-bold h-32 hover:border-4 hover:grow-[2] border-green-950 transition-all duration-300' do %>
