--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <%= link_to 'New user', new_user_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="users" class="min-w-full">
+  <div id="users" class="min-w-full flex flex-row flex-wrap justify-center">
     <%= render @users %>
   </div>
 </div>
