--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,12 @@
     <tbody>
       <% @orders.each do |order| %>
           <tr class="my-2 p-2 <%= cycle('bg-green-50', 'bg-white') %>  text-lg">
-            <td class="px-3 py-5"><%= order.id %></td><td class="px-3"><%= order.name %></td><td class="px-3"><%= order.address %></td><td class="px-3"><%= order.pay_type %></td><td class="px-3"><%= order.email %></td><td class="px-3"><%= order.created_at.to_formatted_s(:long) %></td>          
+            <td class="px-3 py-5"><%= order.id %></td>
+            <td class="px-3"><%= order.name %></td>
+            <td class="px-3"><%= order.address %></td>
+            <td class="px-3"><%= order.pay_type %></td>
+            <td class="px-3"><%= order.email %></td>
+            <td class="px-3"><%= order.created_at.to_formatted_s(:long) %></td>          
           </tr>
       <% end %>
     </tbody>
